esp32/build/log/idf_py_stdout_output_52716
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/lucca/Documents/projetao/build/bootloader/esp-idf/esptool_py && /home/lucca/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/lucca/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/lucca/Documents/projetao/build/bootloader/bootloader.bin
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/infrared/CMakeFiles/__idf_infrared.dir/infrared.c.obj
FAILED: esp-idf/infrared/CMakeFiles/__idf_infrared.dir/infrared.c.obj 
/home/lucca/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2-602-gdb1e54a0c5\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/lucca/Documents/projetao/build/config -I/home/lucca/Documents/projetao/components/infrared/include -I/home/lucca/esp/esp-idf/components/newlib/platform_include -I/home/lucca/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lucca/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lucca/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/lucca/esp/esp-idf/components/freertos/esp_additions/include -I/home/lucca/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/lucca/esp/esp-idf/components/esp_hw_support/include -I/home/lucca/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lucca/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/lucca/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/lucca/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/lucca/esp/esp-idf/components/heap/include -I/home/lucca/esp/esp-idf/components/log/include -I/home/lucca/esp/esp-idf/components/soc/include -I/home/lucca/esp/esp-idf/components/soc/esp32 -I/home/lucca/esp/esp-idf/components/soc/esp32/include -I/home/lucca/esp/esp-idf/components/hal/esp32/include -I/home/lucca/esp/esp-idf/components/hal/include -I/home/lucca/esp/esp-idf/components/hal/platform_port/include -I/home/lucca/esp/esp-idf/components/esp_rom/include -I/home/lucca/esp/esp-idf/components/esp_rom/include/esp32 -I/home/lucca/esp/esp-idf/components/esp_rom/esp32 -I/home/lucca/esp/esp-idf/components/esp_common/include -I/home/lucca/esp/esp-idf/components/esp_system/include -I/home/lucca/esp/esp-idf/components/esp_system/port/soc -I/home/lucca/esp/esp-idf/components/esp_system/port/include/private -I/home/lucca/esp/esp-idf/components/xtensa/include -I/home/lucca/esp/esp-idf/components/xtensa/esp32/include -I/home/lucca/esp/esp-idf/components/lwip/include -I/home/lucca/esp/esp-idf/components/lwip/include/apps -I/home/lucca/esp/esp-idf/components/lwip/include/apps/sntp -I/home/lucca/esp/esp-idf/components/lwip/lwip/src/include -I/home/lucca/esp/esp-idf/components/lwip/port/include -I/home/lucca/esp/esp-idf/components/lwip/port/freertos/include -I/home/lucca/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/lucca/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/lucca/esp/esp-idf/components/driver/include -I/home/lucca/esp/esp-idf/components/driver/deprecated -I/home/lucca/esp/esp-idf/components/driver/analog_comparator/include -I/home/lucca/esp/esp-idf/components/driver/dac/include -I/home/lucca/esp/esp-idf/components/driver/gpio/include -I/home/lucca/esp/esp-idf/components/driver/gptimer/include -I/home/lucca/esp/esp-idf/components/driver/i2c/include -I/home/lucca/esp/esp-idf/components/driver/i2s/include -I/home/lucca/esp/esp-idf/components/driver/ledc/include -I/home/lucca/esp/esp-idf/components/driver/mcpwm/include -I/home/lucca/esp/esp-idf/components/driver/parlio/include -I/home/lucca/esp/esp-idf/components/driver/pcnt/include -I/home/lucca/esp/esp-idf/components/driver/rmt/include -I/home/lucca/esp/esp-idf/components/driver/sdio_slave/include -I/home/lucca/esp/esp-idf/components/driver/sdmmc/include -I/home/lucca/esp/esp-idf/components/driver/sigma_delta/include -I/home/lucca/esp/esp-idf/components/driver/spi/include -I/home/lucca/esp/esp-idf/components/driver/temperature_sensor/include -I/home/lucca/esp/esp-idf/components/driver/touch_sensor/include -I/home/lucca/esp/esp-idf/components/driver/twai/include -I/home/lucca/esp/esp-idf/components/driver/uart/include -I/home/lucca/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/lucca/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/lucca/esp/esp-idf/components/esp_pm/include -I/home/lucca/esp/esp-idf/components/esp_ringbuf/include -I/home/lucca/Documents/projetao/components/http/include -I/home/lucca/esp/esp-idf/components/nvs_flash/include -I/home/lucca/esp/esp-idf/components/spi_flash/include -I/home/lucca/esp/esp-idf/components/esp_partition/include -I/home/lucca/esp/esp-idf/components/esp_event/include -I/home/lucca/esp/esp-idf/components/esp_wifi/include -I/home/lucca/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/lucca/esp/esp-idf/components/esp_phy/include -I/home/lucca/esp/esp-idf/components/esp_phy/esp32/include -I/home/lucca/esp/esp-idf/components/esp_netif/include -I/home/lucca/esp/esp-idf/components/esp_http_client/include -I/home/lucca/esp/esp-idf/components/esp-tls -I/home/lucca/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/lucca/esp/esp-idf/components/mbedtls/port/include -I/home/lucca/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/lucca/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/lucca/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/lucca/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/lucca/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/lucca/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/lucca/Documents/projetao=. -fmacro-prefix-map=/home/lucca/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/infrared/CMakeFiles/__idf_infrared.dir/infrared.c.obj -MF esp-idf/infrared/CMakeFiles/__idf_infrared.dir/infrared.c.obj.d -o esp-idf/infrared/CMakeFiles/__idf_infrared.dir/infrared.c.obj -c /home/lucca/Documents/projetao/components/infrared/infrared.c
/home/lucca/Documents/projetao/components/infrared/infrared.c: In function 'infrared_task':
/home/lucca/Documents/projetao/components/infrared/infrared.c:37:57: error: format '%d' expects argument of type 'int', but argument 2 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
   37 |                 printf("ADICIONEI NA VOTACAO 1, TOTAL: %d\n\n", votos_->voto_1);
      |                                                        ~^       ~~~~~~~~~~~~~~
      |                                                         |             |
      |                                                         int           uint32_t {aka long unsigned int}
      |                                                        %ld
/home/lucca/Documents/projetao/components/infrared/infrared.c:44:57: error: format '%d' expects argument of type 'int', but argument 2 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
   44 |                 printf("ADICIONEI NA VOTACAO 2, TOTAL: %d\n\n", votos_->voto_2);
      |                                                        ~^       ~~~~~~~~~~~~~~
      |                                                         |             |
      |                                                         int           uint32_t {aka long unsigned int}
      |                                                        %ld
cc1: some warnings being treated as errors
[4/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
